deployment/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: post-service
  name: post-service
  namespace: post-service-prod
spec:
  selector:
    app: post-service
  ports:
    - protocol: TCP
      port: 8091
      targetPort: 8091
